# cram_sherpa_robots

./: .gitignore  README.md  cram.rosinstall
cram_sherpa_blue_wasp/: CMakeLists.txt  cram-sherpa-blue-wasp.asd  package.xml
cram_sherpa_blue_wasp/src/: description.lisp  designators.lisp  low-level.lisp  package.lisp  plans.lisp  process-modules.lisp
cram_sherpa_donkey/: CMakeLists.txt  cram-sherpa-donkey.asd  package.xml
cram_sherpa_donkey/src/: description.lisp  designators.lisp  low-level.lisp  package.lisp  plans.lisp  process-modules.lisp  ros.lisp
cram_sherpa_hawk/: CMakeLists.txt  cram-sherpa-hawk.asd  package.xml
cram_sherpa_hawk/src/: description.lisp  designators.lisp  low-level.lisp  package.lisp  plans.lisp  process-modules.lisp
cram_sherpa_helicopter/: CMakeLists.txt  cram-sherpa-helicopter.asd  package.xml
cram_sherpa_helicopter/src/: bullet-utils.lisp  designators.lisp  low-level.lisp  package.lisp  plans.lisp  process-modules.lisp  projection.lisp
cram_sherpa_red_wasp/: CMakeLists.txt  cram-sherpa-red-wasp.asd  package.xml
cram_sherpa_red_wasp/src/: description.lisp  designators.lisp  low-level.lisp  package.lisp  plans.lisp  process-modules.lisp
cram_sherpa_robots/: CMakeLists.txt  package.xml
cram_sherpa_robots_common/: CMakeLists.txt  cram-sherpa-robots-common.asd  package.xml
cram_sherpa_robots_common/src/: action-designator-server.lisp  action-json-parser.lisp  actions-ros.lisp  belief-state.lisp  costmap-test.lisp  cram-owl.lisp  define-action-client-and-make-goals.lisp  location-of.lisp  logging.lisp  low-level-action-clients.lisp  package.lisp  plan-library.lisp  prolog.lisp  reachable-for-donkey.lisp  robosherlock-action.lisp  utils.lisp
cram_sherpa_wasp/: CMakeLists.txt  cram-sherpa-wasp.asd  package.xml
cram_sherpa_wasp/src/: designators.lisp  low-level.lisp  package.lisp  plans.lisp  process-modules.lisp  projection.lisp
