<?xml version="1.0"?>
<package format="2">
  <name>cram_sherpa_hawk</name>
  <version>0.0.0</version>
  <description>cram_sherpa_hawk</description>
  <author>Gayane Kazhoyan</author>
  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cram_sherpa_helicopter</depend>
  <depend>cram_prolog</depend>
  <depend>cram_robot_interfaces</depend>
  <depend>cram_sherpa_robots_common</depend>
  <depend>roslisp</depend>
</package>
