<?xml version="1.0"?>
<package format="2">
  <name>cram_sherpa_helicopter</name>
  <version>0.0.0</version>
  <description>cram_sherpa_helicopter</description>
  <author>Gayane Kazhoyan</author>
  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cl_transforms_stamped</depend>
  <depend>cram_process_modules</depend>
  <depend>cram_prolog</depend>
  <depend>cram_utilities</depend>
  <depend>cram_designators</depend>
  <depend>cram_projection</depend>
  <depend>cram_sherpa_robots_common</depend>
</package>
