<package>
  <name>cram_sherpa_robots</name>
  <version>0.0.0</version>
  <description>Metapackage for SHERPA project robot low-level code.</description>
  <author>Gayane Kazhoyan</author>
  <maintainer email="kazhoyan@cs.uni-bremen.de">Gayane Kazhoyan</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>cram_sherpa_robots_common</run_depend>
  <run_depend>cram_sherpa_red_wasp</run_depend>
</package>
